# capnproto-rust

capnpc/: BUILD.bazel
