# Hand-written rust_library + rust_binary for the vendored capnpc + capnpc-rust.
# Library deps come from @crates (upstream crates.io capnp).

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "Cargo.toml",
    "rust.capnp",
])

rust_library(
    name = "capnpc",
    srcs = [
        "src/codegen.rs",
        "src/codegen_types.rs",
        "src/lib.rs",
        "src/pointer_constants.rs",
    ],
    compile_data = ["rust.capnp"],
    crate_name = "capnpc",
    crate_root = "src/lib.rs",
    edition = "2021",
    rustc_flags = ["--cap-lints=allow"],
    version = "0.25.0",
    deps = [
        "@crates//:capnp",
    ],
)

rust_binary(
    name = "capnpc-rust",
    srcs = ["src/capnpc-rust.rs"],
    crate_root = "src/capnpc-rust.rs",
    edition = "2021",
    rustc_flags = ["--cap-lints=allow"],
    version = "0.25.0",
    deps = [
        ":capnpc",
        "@crates//:capnp",
    ],
)
